home-page style

--- a/src/app/content/index/index.component.html
+++ b/src/app/content/index/index.component.html
@@ -1,3 +1,10 @@
-<p>
-  index works!
-</p>
+<div class="col-md-12 d-flex justify-content-center">
+  <div class="index-content ">
+    <h1>Minha Carteira</h1>
+    <p>
+      Verifique a variação atual, e rendimento das suas aplicações em um unico lugar, facilitando a visualização
+      consolidade de todas as aplicações
+    </p>
+  </div>
+
+</div>
