--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,23 @@
-<p>
-  navbar works!
-</p>
+<ul class="d-flex justify-content-center">
+  <li>
+    <a class="menu-separator">|</a>
+  </li>
+  <li>
+    <a routerLink="home">Home</a>
+  </li>
+  <li>
+    <a class="menu-separator">|</a>
+  </li>
+  <li>
+    <a href="#">Indices</a>
+  </li>
+  <li>
+    <a class="menu-separator">|</a>
+  </li>
+  <li>
+    <a routerLink="login">Login</a>
+  </li>
+  <li>
+    <a class="menu-separator">|</a>
+  </li>
+</ul>
