--- a/src/app/content/login/login.component.html
+++ b/src/app/content/login/login.component.html
@@ -1,3 +1,12 @@
-<p>
-  login works!
-</p>
+<div class="login-form">
+  <div class="wrapper">
+    <form>
+      <h1>Login</h1>
+      <input type="text" placeholder="usuário">
+      <input type="password" placeholder="senha">
+      <br>
+      <a href=#>esqueci minha senha</a>
+      <button type="button" class="btn btn-dark">Entrar</button>
+    </form>
+  </div>
+</div>
