--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
     <a class="menu-separator">|</a>
   </li>
   <li>
-    <a href="#">Indices</a>
+    <a routerLink="info">Indices</a>
   </li>
   <li>
     <a class="menu-separator">|</a>
