--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,23 +1,23 @@
 <ul class="d-flex justify-content-center">
   <li>
-    <a class="menu-separator">|</a>
+    <p class="menu-separator">|</p>
   </li>
   <li>
     <a routerLink="home">Home</a>
   </li>
   <li>
-    <a class="menu-separator">|</a>
+    <p class="menu-separator">|</p>
   </li>
   <li>
     <a routerLink="info">Indices</a>
   </li>
   <li>
-    <a class="menu-separator">|</a>
+    <p class="menu-separator">|</p>
   </li>
   <li>
     <a routerLink="login">Login</a>
   </li>
   <li>
-    <a class="menu-separator">|</a>
+    <p class="menu-separator">|</p>
   </li>
 </ul>
