--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -14,3 +14,9 @@ li a {
     color: #FFF;
     text-decoration: none;
 }
+p {
+    display: block;
+    color: #FFF;
+    text-align: center;
+    padding: 10px 10px;
+}
