limpeza no layout e nova secao

--- a/src/app/content/info/info.component.html
+++ b/src/app/content/info/info.component.html
@@ -1,3 +1,22 @@
-<p>
-  info works!
-</p>
+<div class="row">
+  <div class="box">
+    <h5>IPCA</h5>
+    <span>2.4%</span>
+  </div>
+  <div class="box">
+    <h5>CDI</h5>
+    <span>5.9%</span>
+  </div>
+  <div class="box">
+    <h5>IBOVESPA</h5>
+    <span>+3.4%</span>
+  </div>
+  <div class="box">
+    <h5>IBOVESPA</h5>
+    <span>+5.9%</span>
+  </div>
+  <div class="box">
+    <h5>IFIX</h5>
+    <span>-0.72%</span>
+  </div>
+</div>
